--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@
 
 development: &default
   username: postgres
-  host: db
+  host: <%= ENV.fetch('DATABASE_HOST', 'localhost') %>
   adapter: postgresql
   # pool: 5
   # timeout: 5000
